# Transmission_Constraint_Binding_Model

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
data/results/: aggregate_metrics.json  layer1_summary.md
docs/: DATA_SOURCES.md  master_dataset.md
notebooks/outputs/regime_check/: summary.txt
scripts/: check_gpu.py  download_miso_data.py  fix_zero_models.py  regime_check.py  retrain_seasonal_features.py
src/data/: loaders.py
src/evaluation/: evaluate.py  generate_layer1_summary.py  test_evaluation.py
src/explainability/: shap_explainer.py
src/features/: __init__.py  build_features.py  build_master_dataset.py  flowgate_features.py  load_features.py  outage_features.py  renewable_features.py  temporal.py
src/models/: cv.py  train.py
src/utils/: io.py
src/validation/: sanity_check.py
tests/: conftest.py  test_cv.py  test_features.py
