[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "miso-constraint-binding"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "scikit-learn>=1.4",
    "imbalanced-learn>=0.12",
    "optuna>=3.5",
    "shap>=0.44",
    "pandas>=2.1",
    "polars>=0.20",
    "numpy>=1.26",
    "joblib>=1.3",
    "matplotlib>=3.8",
    "pyarrow>=14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "mypy>=1.7",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
